--- a/public/index.html
+++ b/public/index.html
@@ -20,86 +20,10 @@
     <main>
         <h3>Like dislike and add some your jokes😂🤣🤣😂🤣🤣😂</h3>
         <div class="jokes">
-            <div class="joke">
-                <div class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis.
-                </div>
-                <div class="buttons">
-                    <div class="likes">10</div>
-                    <button class="like"><i class="fa-solid fa-thumbs-up"></i></button>
-                    <div class="dislikes">10</div>
-                    <button class="dislike"><i class="fa-solid fa-thumbs-down"></i></button>
-                </div>
-            </div>
-                        <div class="joke">
-                <div class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis.
-                </div>
-                <div class="buttons">
-                    <div class="likes">10</div>
-                    <button class="like"><i class="fa-solid fa-thumbs-up"></i></button>
-                    <div class="dislikes">10</div>
-                    <button class="dislike"><i class="fa-solid fa-thumbs-down"></i></button>
-                </div>
-            </div>
-                        <div class="joke">
-                <div class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis.
-                </div>
-                <div class="buttons">
-                    <div class="likes">10</div>
-                    <button class="like"><i class="fa-solid fa-thumbs-up"></i></button>
-                    <div class="dislikes">10</div>
-                    <button class="dislike"><i class="fa-solid fa-thumbs-down"></i></button>
-                </div>
-            </div>
-                        <div class="joke">
-                <div class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis.
-                </div>
-                <div class="buttons">
-                    <div class="likes">10</div>
-                    <button class="like"><i class="fa-solid fa-thumbs-up"></i></button>
-                    <div class="dislikes">10</div>
-                    <button class="dislike"><i class="fa-solid fa-thumbs-down"></i></button>
-                </div>
-            </div>
-                        <div class="joke">
-                <div class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis.
-                </div>
-                <div class="buttons">
-                    <div class="likes">10</div>
-                    <button class="like"><i class="fa-solid fa-thumbs-up"></i></button>
-                    <div class="dislikes">10</div>
-                    <button class="dislike"><i class="fa-solid fa-thumbs-down"></i></button>
-                </div>
-            </div>
-                        <div class="joke">
-                <div class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis.
-                </div>
-                <div class="buttons">
-                    <div class="likes">10</div>
-                    <button class="like"><i class="fa-solid fa-thumbs-up"></i></button>
-                    <div class="dislikes">10</div>
-                    <button class="dislike"><i class="fa-solid fa-thumbs-down"></i></button>
-                </div>
-            </div>
-                        <div class="joke">
-                <div class="content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, veritatis.
-                </div>
-                <div class="buttons">
-                    <div class="likes">10</div>
-                    <button class="like"><i class="fa-solid fa-thumbs-up"></i></button>
-                    <div class="dislikes">10</div>
-                    <button class="dislike"><i class="fa-solid fa-thumbs-down"></i></button>
-                </div>
-            </div>
+
         </div>
         <form>
-            <input type="text" placeholder="input your joke. . .">
+            <input type="text" name="content" placeholder="input your joke. . .">
             <button type="submit">add</button>
         </form>
     </main>
